# pyopenbot

./: .gitignore  .ruff.toml  pyproject.toml
src/openbot/: __main__.py  main.py
src/openbot/cli/: CLI.py
src/openbot/cli/cli_commands/: Check.py  Init.py  Run.py  Test.py
src/openbot/commands/: base_command.py  check.py  init.py  run.py
src/pyopenbot/: character.py  llm_service.py  memory.py  pyopenbot_config.py
src/pyopenbot/cli/: CLI.py
src/pyopenbot/commands/: check.py  init.py  run.py
tests/: test_character.py  test_init.py
tests/fixtures/: config_with_file_key.yaml  invalid_config.yaml  test_api_key.txt  valid_config.yaml
