[project]
name = "openbot"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name = "Jason Scheffel", email = "contact@jasonscheffel.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[tool.uv.workspace]
members = ["temp"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
