[project]
name = "pyopenbot"
version = "0.3.0"
description = "Add your description here"
authors = [
  {name = "Jason Scheffel", email = "contact@jasonscheffel.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "any-llm-sdk>=0.13.1",
    "discord-py[voice]>=2.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[tool.uv.workspace]
members = ["temp"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
pyopenbot = "pyopenbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyopenbot"]
